--- a/src/app/components/employees-list/employees-list.component.html
+++ b/src/app/components/employees-list/employees-list.component.html
@@ -1,23 +1,12 @@
 <div class="container mt-3">
-  <div class="card">
-    <div class="card-body">
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" [(ngModel)]="selectedRadioButton" 
-          type="radio" name="sex" id="todos" value="all">
-        <label class="form-check-label" for="todos">All({{ totalEmployees() }})</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" [(ngModel)]="selectedRadioButton" 
-          type="radio" name="sex" id="female" value="Fem">
-        <label class="form-check-label" for="female">Female({{ femaleEmployees() }})</label>
-      </div>
-      <div class="form-check form-check-inline">
-        <input class="form-check-input" [(ngModel)]="selectedRadioButton" 
-          type="radio" name="sex" id="male" value="Masc">
-        <label class="form-check-label" for="male">Male({{ maleEmployees() }})</label>
-      </div>
-    </div>
-  </div>
+
+  <app-employees-count 
+    [all]="totalEmployees()" 
+    [fem]="femaleEmployees()" 
+    [masc]="maleEmployees()"
+    (radioButton)="filteredEmployees($event)"
+  ></app-employees-count>
+  
   <div class="card mt-3">
     <div class="card-body">
       <table class="table table-striped">
@@ -44,6 +33,5 @@
         </tbody>
       </table>
     </div>
-
+  </div>
 </div>
-<app-employees-count></app-employees-count>
